# pysandbox

./: .gitignore  README.md  justfile  pyproject.toml
tests/: test_foo.py
