[project]
name = "pysandbox"
version = "0.1.0"
description = "A python sandbox."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "ipdb>=0.13.13",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.7",
]

[tool.ruff]
target-version = "py314" 
line-length = 88
indent-width = 4
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["pysandbox"]

[tool.ruff.format]
quote-style = "double"
#indent-style = "space"
#skip-magic-trailing-comma = false
#line-ending = "auto"

[tool.basedpyright]
pythonVersion = "3.14"
typeCheckingMode = "standard" 
include = ["pysandbox"]
exclude = ["**/__pycache__", ".venv"]
reportAny = true
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
addopts = "-v -ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

